--- a/about-us.htm
+++ b/about-us.htm
@@ -61,9 +61,7 @@
 
   gtag('config', 'G-ZMF5N22VMQ');
 </script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3332997411212854"
-     crossorigin="anonymous"></script>
-</head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6957240247502121" crossorigin="anonymous"></script></head>
 
 <body id="page-top" data-page="newly_discovered_nodes">
         <!-- Navigation
@@ -128,16 +126,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="VPN设备 | 9月9日18.8M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享">VPN设备 | 9月9日18.8M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-4-free-vpn-node.htm" title="VPN设备 | 9月4日20.8M/S|免费VPN/V2ray/Clash/Shadowrocket/SSR免费节点订阅分享">VPN设备 | 9月4日20.8M/S|免费VPN/V2ray/Clash/Shadowrocket/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-23-top-vpn-node.htm" title="VPN设备 | 8月23日21.7M/S|免费VPN/V2ray/Clash/Shadowrocket/SSR免费节点订阅分享">VPN设备 | 8月23日21.7M/S|免费VPN/V2ray/Clash/Shadowrocket/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-11-top-vpn.htm" title="VPN设备 | 9月11日21.6M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 9月11日21.6M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-15-node-share-links.htm" title="VPN安卓 | 8月15日21.7M/S|免费SSR/Clash/Shadowrocket/V2ray免费节点订阅分享">VPN安卓 | 8月15日21.7M/S|免费SSR/Clash/Shadowrocket/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-18-share-vpn.htm" title="VPN安卓 | 8月18日19.6M/S|免费V2ray/Shadowrocket/SSR/Clash免费节点订阅分享">VPN安卓 | 8月18日19.6M/S|免费V2ray/Shadowrocket/SSR/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-11-free-vpn.htm" title="VPN安卓 | 8月11日18.2M/S|免费V2ray/Clash/Shadowrocket/SSR免费节点订阅分享">VPN安卓 | 8月11日18.2M/S|免费V2ray/Clash/Shadowrocket/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-9-free-vpn-node.htm" title="VPN安卓 | 8月9日21.3M/S|免费Shadowrocket/Clash/V2ray/SSR免费节点订阅分享">VPN安卓 | 8月9日21.3M/S|免费Shadowrocket/Clash/V2ray/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-8-vpn-free.htm" title="VPN安卓 | 8月8日22.7M/S|免费Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN安卓 | 8月8日22.7M/S|免费Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-3-top-vpn-node.htm" title="VPN设备 | 9月3日20.7M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享">VPN设备 | 9月3日20.7M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-11-top-vpn.htm" title="VPN设备 | 9月11日21.6M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 9月11日21.6M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-8-free-node-subscribe.htm" title="VPN设备 | 9月8日22.1M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享">VPN设备 | 9月8日22.1M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-10-vpn-proxy.htm" title="VPN设备 | 9月10日20M/S|免费VPN/SSR/Shadowrocket/Clash/V2ray免费节点订阅分享">VPN设备 | 9月10日20M/S|免费VPN/SSR/Shadowrocket/Clash/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-10-top-vpn.htm" title="VPN安卓 | 8月10日18.9M/S|免费SSR/Shadowrocket/Clash/V2ray免费节点订阅分享">VPN安卓 | 8月10日18.9M/S|免费SSR/Shadowrocket/Clash/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-12-top-vpn-node.htm" title="VPN安卓 | 8月12日20.5M/S|免费Shadowrocket/Clash/SSR/V2ray免费节点订阅分享">VPN安卓 | 8月12日20.5M/S|免费Shadowrocket/Clash/SSR/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-14-node-share-links.htm" title="VPN设备 | 9月14日20.5M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 9月14日20.5M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-18-share-vpn.htm" title="VPN安卓 | 8月18日19.6M/S|免费V2ray/Shadowrocket/SSR/Clash免费节点订阅分享">VPN安卓 | 8月18日19.6M/S|免费V2ray/Shadowrocket/SSR/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-27-share-vpn.htm" title="VPN设备 | 8月27日22M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 8月27日22M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-free-vpn-node.htm" title="VPN设备 | 9月15日18.2M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享">VPN设备 | 9月15日18.2M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -149,7 +147,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
