--- a/date/2025-09/page-2.htm
+++ b/date/2025-09/page-2.htm
@@ -61,9 +61,7 @@
 
   gtag('config', 'G-ZMF5N22VMQ');
 </script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3332997411212854"
-     crossorigin="anonymous"></script>
-</head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6957240247502121" crossorigin="anonymous"></script></head>
 
 <body id="page-top" data-page="category">
         <!-- Navigation
@@ -114,6 +112,96 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-08">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-8-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 9月8日22.1M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享" src="/uploads/20241222-1/35f2ca1dcee5e084eaf1ccbd9a4339cc.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-8-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 9月8日22.1M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了美国、香港、日本、韩国、新加坡、加拿大、欧洲等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-07">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-7-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 9月7日21.3M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享" src="/uploads/20241222-1/9e2b225d869222c8f450f1935366fea1.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-7-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 9月7日21.3M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、欧洲、韩国、新加坡、日本、美国、加拿大等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-06">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-6-top-vpn-node.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 9月6日20.4M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享" src="/uploads/20241222-1/82977253972095a20fc67c366bb8fa6d.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-6-top-vpn-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 9月6日20.4M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、美国、加拿大、日本、欧洲、韩国、新加坡等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-05">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-5-share-vpn.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 9月5日22.6M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享" src="/uploads/20241222-1/becabf2a83a60c5b8ca26e178386a903.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-5-share-vpn.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 9月5日22.6M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、美国、新加坡、香港、日本、韩国、欧洲等地区,最高速度可达22.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-04">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-4-free-vpn-node.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 9月4日20.8M/S|免费VPN/V2ray/Clash/Shadowrocket/SSR免费节点订阅分享" src="/uploads/20241222-1/aa3ddc9bff6fda25db17c202e775086f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-4-free-vpn-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 9月4日20.8M/S|免费VPN/V2ray/Clash/Shadowrocket/SSR免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、香港、加拿大、欧洲、日本、美国、新加坡等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-03">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-3-top-vpn-node.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 9月3日20.7M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享" src="/uploads/20241222-1/3e06145ef3df4476540f41e96f63345f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-3-top-vpn-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 9月3日20.7M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、加拿大、新加坡、韩国、日本、美国、香港等地区,最高速度可达20.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-09-02">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-9-2-top-vpn-node.htm" class="xcblog-blog-url">
@@ -154,16 +242,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-23-top-vpn-node.htm" title="VPN设备 | 8月23日21.7M/S|免费VPN/V2ray/Clash/Shadowrocket/SSR免费节点订阅分享">VPN设备 | 8月23日21.7M/S|免费VPN/V2ray/Clash/Shadowrocket/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-27-share-vpn.htm" title="VPN设备 | 8月27日22M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 8月27日22M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-19-free-vpn-node.htm" title="VPN安卓 | 8月19日21.8M/S|免费Shadowrocket/Clash/V2ray/SSR免费节点订阅分享">VPN安卓 | 8月19日21.8M/S|免费Shadowrocket/Clash/V2ray/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-17-vpn-github.htm" title="VPN安卓 | 8月17日21.4M/S|免费SSR/Shadowrocket/Clash/V2ray免费节点订阅分享">VPN安卓 | 8月17日21.4M/S|免费SSR/Shadowrocket/Clash/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-10-vpn-proxy.htm" title="VPN设备 | 9月10日20M/S|免费VPN/SSR/Shadowrocket/Clash/V2ray免费节点订阅分享">VPN设备 | 9月10日20M/S|免费VPN/SSR/Shadowrocket/Clash/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-29-free-vpn.htm" title="VPN设备 | 8月29日18.4M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享">VPN设备 | 8月29日18.4M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-6-node-share-links.htm" title="VPN安卓 | 8月6日20.4M/S|免费V2ray/Clash/Shadowrocket/SSR免费节点订阅分享">VPN安卓 | 8月6日20.4M/S|免费V2ray/Clash/Shadowrocket/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-16-vpn-node.htm" title="VPN安卓 | 8月16日18.3M/S|免费V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN安卓 | 8月16日18.3M/S|免费V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-13-vpn-free.htm" title="VPN安卓 | 8月13日19.6M/S|免费SSR/V2ray/Clash/Shadowrocket免费节点订阅分享">VPN安卓 | 8月13日19.6M/S|免费SSR/V2ray/Clash/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-22-vpn-github.htm" title="VPN设备 | 8月22日19.7M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 8月22日19.7M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-28-node-share.htm" title="VPN设备 | 8月28日19.4M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享">VPN设备 | 8月28日19.4M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-14-vpn-free.htm" title="VPN安卓 | 8月14日22.9M/S|免费SSR/Clash/Shadowrocket/V2ray免费节点订阅分享">VPN安卓 | 8月14日22.9M/S|免费SSR/Clash/Shadowrocket/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-free-vpn-node.htm" title="VPN设备 | 9月15日18.2M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享">VPN设备 | 9月15日18.2M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-14-node-share-links.htm" title="VPN设备 | 9月14日20.5M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 9月14日20.5M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-6-node-share-links.htm" title="VPN安卓 | 8月6日20.4M/S|免费V2ray/Clash/Shadowrocket/SSR免费节点订阅分享">VPN安卓 | 8月6日20.4M/S|免费V2ray/Clash/Shadowrocket/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-vpn-github.htm" title="VPN设备 | 9月13日19.4M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 9月13日19.4M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-8-vpn-free.htm" title="VPN安卓 | 8月8日22.7M/S|免费Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN安卓 | 8月8日22.7M/S|免费Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-8-free-node-subscribe.htm" title="VPN设备 | 9月8日22.1M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享">VPN设备 | 9月8日22.1M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-10-top-vpn.htm" title="VPN安卓 | 8月10日18.9M/S|免费SSR/Shadowrocket/Clash/V2ray免费节点订阅分享">VPN安卓 | 8月10日18.9M/S|免费SSR/Shadowrocket/Clash/V2ray免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -175,7 +263,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
