--- a/free-nodes/2025-9-12-top-vpn.htm
+++ b/free-nodes/2025-9-12-top-vpn.htm
@@ -63,9 +63,7 @@
 
   gtag('config', 'G-ZMF5N22VMQ');
 </script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3332997411212854"
-     crossorigin="anonymous"></script>
-</head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6957240247502121" crossorigin="anonymous"></script></head>
 
 <body id="page-top" data-page="detail">
         <!-- Navigation
@@ -171,6 +169,7 @@ IP-CIDR,8.8.8.8/32,DIRECT</pre></div></li></ul><h3>3.2 耗电控制技巧</h3><u
                 <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-9-11-top-vpn.htm">VPN设备 | 9月11日21.6M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-9-13-vpn-github.htm">VPN设备 | 9月13日19.4M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -199,16 +198,16 @@ IP-CIDR,8.8.8.8/32,DIRECT</pre></div></li></ul><h3>3.2 耗电控制技巧</h3><u
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-12-top-vpn.htm" title="VPN设备 | 9月12日22.9M/S|免费VPN/Clash/SSR/V2ray/Shadowrocket免费节点订阅分享">VPN设备 | 9月12日22.9M/S|免费VPN/Clash/SSR/V2ray/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-11-free-vpn.htm" title="VPN安卓 | 8月11日18.2M/S|免费V2ray/Clash/Shadowrocket/SSR免费节点订阅分享">VPN安卓 | 8月11日18.2M/S|免费V2ray/Clash/Shadowrocket/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-19-free-vpn-node.htm" title="VPN安卓 | 8月19日21.8M/S|免费Shadowrocket/Clash/V2ray/SSR免费节点订阅分享">VPN安卓 | 8月19日21.8M/S|免费Shadowrocket/Clash/V2ray/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-15-node-share-links.htm" title="VPN安卓 | 8月15日21.7M/S|免费SSR/Clash/Shadowrocket/V2ray免费节点订阅分享">VPN安卓 | 8月15日21.7M/S|免费SSR/Clash/Shadowrocket/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-12-top-vpn-node.htm" title="VPN安卓 | 8月12日20.5M/S|免费Shadowrocket/Clash/SSR/V2ray免费节点订阅分享">VPN安卓 | 8月12日20.5M/S|免费Shadowrocket/Clash/SSR/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-16-vpn-node.htm" title="VPN安卓 | 8月16日18.3M/S|免费V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN安卓 | 8月16日18.3M/S|免费V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-22-vpn-github.htm" title="VPN设备 | 8月22日19.7M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 8月22日19.7M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-4-vpn-proxy.htm" title="VPN安卓 | 8月4日19.1M/S|免费Shadowrocket/Clash/SSR/V2ray免费节点订阅分享">VPN安卓 | 8月4日19.1M/S|免费Shadowrocket/Clash/SSR/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-11-top-vpn.htm" title="VPN设备 | 9月11日21.6M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 9月11日21.6M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-5-share-vpn.htm" title="VPN设备 | 9月5日22.6M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 9月5日22.6M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-7-free-node-subscribe-links.htm" title="VPN设备 | 9月7日21.3M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN设备 | 9月7日21.3M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-free-vpn-node.htm" title="VPN设备 | 9月15日18.2M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享">VPN设备 | 9月15日18.2M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-14-vpn-free.htm" title="VPN安卓 | 8月14日22.9M/S|免费SSR/Clash/Shadowrocket/V2ray免费节点订阅分享">VPN安卓 | 8月14日22.9M/S|免费SSR/Clash/Shadowrocket/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-vpn-node.htm" title="VPN设备 | 9月18日22.5M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 9月18日22.5M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-10-vpn-proxy.htm" title="VPN设备 | 9月10日20M/S|免费VPN/SSR/Shadowrocket/Clash/V2ray免费节点订阅分享">VPN设备 | 9月10日20M/S|免费VPN/SSR/Shadowrocket/Clash/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-vpn-github.htm" title="VPN设备 | 9月13日19.4M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 9月13日19.4M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-26-node-share.htm" title="VPN设备 | 8月26日18.9M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享">VPN设备 | 8月26日18.9M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-22-vpn-github.htm" title="VPN设备 | 8月22日19.7M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 8月22日19.7M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-8-vpn-free.htm" title="VPN安卓 | 8月8日22.7M/S|免费Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN安卓 | 8月8日22.7M/S|免费Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -220,7 +219,7 @@ IP-CIDR,8.8.8.8/32,DIRECT</pre></div></li></ul><h3>3.2 耗电控制技巧</h3><u
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
